Bug 1927280 - Prevents for h264 attaching SPS and PPS Nalu if already present on Windows r=chunmin

This patch prevents adding the SPS and PPS present in extradata WMFMediaDataEncoder,
if the data already contains SPS and PPS. Otherwise, the resulting Byte stream would
 not be spec complained and be rejected by Chromium, for example.
It also includes a WPT test.

Differential Revision: https://phabricator.services.mozilla.com/D226985